--- a/src/main/resources/templates/newEvent.html
+++ b/src/main/resources/templates/newEvent.html
@@ -20,8 +20,8 @@
 						placeholder="Desribe your Event" class="form-control"></textarea>
 				</div>
 				<div class="form-group">
-					<button class="btn btn-md btn-success btn-block" name="Submit"
-						value="Submit" type="Submit">Post your Event!</button>
+					<button class="btn btn-md btn-success btn-block" name="submit"
+						value="up" type="submit">Post your Event!</button>
 				</div>
 			</form>
 			<div th:if="${successMessage}">
