--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -28,27 +28,30 @@
 					<small th:text="${event.date}"></small>
 				</div>
 				<p th:utext="${event.message}"></p>
-				
+
 				<!-- RSVP -->
-				<form  th:action="@{/event/rsvp/}" th:object="${eventToRsvp}" method = "post">
+				<form  th:action="@{/event/rsvp/} + ${event.id}" method="post">
 					<button
-					style="float: right;"
-              class="btn btn-dark"
-              name="submit"
-              value="up"
-              type="submit"
-            >
-              RSVP
-            </button>
-				</form> 
+							style="float: right;"
+							class="btn btn-dark"
+							name="submit"
+							value="up"
+							type="submit"
+					>
+						RSVP
+					</button>
+					<!-- END RSVP -->
+				</form>
 				<div th:if="${messageSuccess}">
-				<h3>
-					<span class="text-success" th:utext="${messageSuccess}"></span>
-				</h3>
+					<h2>
+						<span class="text-success" th:utext="${messageSuccess}"></span>
+					</h2>
+					<br />
+					<form th:action="@{/events}" method="get">
+						<button class="btn btn-md btn-primary btn-block" type="Submit">Go back to homepage!
+						</button>
+					</form>
 			</div>
-				<!-- END RSVP -->
-			</div>
-		</div>
 		<div th:if="${#lists.isEmpty(eventList)}">
 			<h3>No events have been created yet</h3>
 		</div>
@@ -56,9 +59,8 @@
 	<div th:if="${#lists.isEmpty(eventList) and filter == 'all'}">
 		<h3>No events have been created yet</h3>
 	</div>
-	<div th:if="${#lists.isEmpty(eventList) and filter == 'following'}">
-		<h3>No events have been created by your followers</h3>
-	</div>
 	<script th:replace="fragments/scripts"></script>
+		</div>
+	</div>
 </body>
 </html>
